Create combined home page and simplify research

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             </div>
             <nav class="site-nav" aria-label="Primary navigation">
                 <a href="index.html" class="active">Home</a>
-                <a href="about.html">About</a>
                 <a href="research.html">Research</a>
             </nav>
         </div>
@@ -26,23 +25,37 @@
     <main>
         <section class="hero">
             <div class="container">
+                <p class="eyebrow">Applied machine learning & human-centered AI</p>
                 <h1>Lucas Wang</h1>
-                <p class="lead">Researcher in applied machine learning and human-centered computing.</p>
-                <p class="intro">I design intelligent systems that respect human values while advancing the frontier of data-driven discovery. Welcome to my academic home online.</p>
-                <a class="cta" href="research.html">Explore Research</a>
+                <p class="lead">Designing quiet technology that helps teams think with clarity.</p>
+                <div class="hero-actions">
+                    <a class="soft-link" href="research.html">See current research</a>
+                    <a class="soft-link" href="mailto:lucas.wang@university.edu">Email Lucas</a>
+                </div>
             </div>
         </section>
 
-        <section class="highlights">
+        <section class="essentials">
             <div class="container split">
-                <div class="card">
-                    <h2>Focus</h2>
-                    <p>My work bridges computational modeling, responsible AI, and immersive experiences to create technology that augments human capabilities.</p>
+                <div>
+                    <h2>Practice</h2>
+                    <p>I sketch and ship adaptive systems that stay calm, legible, and kind to the people who use them.</p>
                 </div>
-                <div class="card">
-                    <h2>Latest</h2>
-                    <p>Currently exploring how adaptive systems can support collaborative research workflows, blending qualitative insight with quantitative rigor.</p>
+                <div>
+                    <h2>Now</h2>
+                    <p>Leading the Human-Centered AI Lab on studies of collaborative discovery, guided models, and thoughtful analytics tools.</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="bio">
+            <div class="container narrow">
+                <p>I build research programs where computation and care meet. My favourite work pairs rigorous modeling with generous listening.</p>
+                <ul class="inline-list">
+                    <li>Assistant Professor, Center for Applied Intelligence</li>
+                    <li>Ph.D., Computer Science, University of Cascadia</li>
+                    <li>Ambient composer & mentor to emerging scholars</li>
+                </ul>
             </div>
         </section>
     </main>
