--- a/research.html
+++ b/research.html
@@ -17,7 +17,6 @@
             </div>
             <nav class="site-nav" aria-label="Primary navigation">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
                 <a href="research.html" class="active">Research</a>
             </nav>
         </div>
@@ -27,43 +26,27 @@
         <section class="page-header">
             <div class="container narrow">
                 <h1>Research</h1>
-                <p class="lead">Selected publications, preprints, and ongoing investigations.</p>
+                <p class="lead">Work in progress across reflective, responsible machine learning.</p>
             </div>
         </section>
 
         <section class="content">
             <div class="container narrow">
-                <div class="paper-list">
+                <div class="paper-list minimal">
                     <article class="paper">
-                        <div class="paper-meta">
-                            <h2>Adaptive Systems for Collaborative Discovery</h2>
-                            <p class="paper-authors">Lucas Wang</p>
-                            <p class="paper-venue">Working Paper, 2024</p>
-                        </div>
-                        <div class="paper-actions">
-                            <a class="paper-link" href="assets/papers/lucas-wang-adaptive-systems.pdf" target="_blank" rel="noopener">View PDF</a>
-                            <a class="paper-link" href="assets/papers/lucas-wang-adaptive-systems.pdf" download>Download</a>
-                        </div>
+                        <h2>Adaptive Systems for Collaborative Discovery</h2>
+                        <p class="paper-meta">Working paper, 2024 &mdash; Lucas Wang</p>
+                        <a class="soft-link" href="assets/papers/lucas-wang-adaptive-systems.pdf" target="_blank" rel="noopener">PDF</a>
                     </article>
                     <article class="paper">
-                        <div class="paper-meta">
-                            <h2>Designing Human-Guided Machine Learning Pipelines</h2>
-                            <p class="paper-authors">Lucas Wang, Mira Patel</p>
-                            <p class="paper-venue">Journal of Interactive AI, 2023</p>
-                        </div>
-                        <div class="paper-actions">
-                            <a class="paper-link" href="#">PDF coming soon</a>
-                        </div>
+                        <h2>Designing Human-Guided Machine Learning Pipelines</h2>
+                        <p class="paper-meta">Journal of Interactive AI, 2023 &mdash; with Mira Patel</p>
+                        <span class="soft-link muted">PDF coming soon</span>
                     </article>
                     <article class="paper">
-                        <div class="paper-meta">
-                            <h2>Sensing Empathy: Multimodal Signals in Collaborative Analytics</h2>
-                            <p class="paper-authors">Lucas Wang, Kenji Ito, Sara Delgado</p>
-                            <p class="paper-venue">CHI Conference, 2022</p>
-                        </div>
-                        <div class="paper-actions">
-                            <a class="paper-link" href="#">PDF coming soon</a>
-                        </div>
+                        <h2>Sensing Empathy: Multimodal Signals in Collaborative Analytics</h2>
+                        <p class="paper-meta">CHI Conference, 2022 &mdash; with Kenji Ito &amp; Sara Delgado</p>
+                        <span class="soft-link muted">PDF coming soon</span>
                     </article>
                 </div>
             </div>
