Simplify landing and research pages

--- a/index.html
+++ b/index.html
@@ -17,31 +17,19 @@
             </div>
             <nav class="site-nav" aria-label="Primary navigation">
                 <a href="index.html" class="active">Home</a>
-                <a href="about.html">About</a>
                 <a href="research.html">Research</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <section class="hero">
-            <div class="container">
+        <section class="hero minimal">
+            <div class="container narrow">
                 <h1>Lucas Wang</h1>
-                <p class="lead">Researcher in applied machine learning and human-centered computing.</p>
-                <p class="intro">I design intelligent systems that respect human values while advancing the frontier of data-driven discovery. Welcome to my academic home online.</p>
-                <a class="cta" href="research.html">Explore Research</a>
-            </div>
-        </section>
-
-        <section class="highlights">
-            <div class="container split">
-                <div class="card">
-                    <h2>Focus</h2>
-                    <p>My work bridges computational modeling, responsible AI, and immersive experiences to create technology that augments human capabilities.</p>
-                </div>
-                <div class="card">
-                    <h2>Latest</h2>
-                    <p>Currently exploring how adaptive systems can support collaborative research workflows, blending qualitative insight with quantitative rigor.</p>
+                <p class="lead">High school student interested in math and machine learning.</p>
+                <div class="hero-actions">
+                    <a class="soft-link" href="research.html">Research</a>
+                    <a class="soft-link" href="mailto:lucaswang421@gmail.com">Email</a>
                 </div>
             </div>
         </section>
