--- a/research.html
+++ b/research.html
@@ -17,17 +17,15 @@
             </div>
             <nav class="site-nav" aria-label="Primary navigation">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
                 <a href="research.html" class="active">Research</a>
             </nav>
         </div>
     </header>
 
     <main>
-        <section class="page-header">
+        <section class="page-header minimal">
             <div class="container narrow">
                 <h1>Research</h1>
-                <p class="lead">Selected publications, preprints, and ongoing investigations.</p>
             </div>
         </section>
 
@@ -35,35 +33,8 @@
             <div class="container narrow">
                 <div class="paper-list">
                     <article class="paper">
-                        <div class="paper-meta">
-                            <h2>Adaptive Systems for Collaborative Discovery</h2>
-                            <p class="paper-authors">Lucas Wang</p>
-                            <p class="paper-venue">Working Paper, 2024</p>
-                        </div>
-                        <div class="paper-actions">
-                            <a class="paper-link" href="assets/papers/lucas-wang-adaptive-systems.pdf" target="_blank" rel="noopener">View PDF</a>
-                            <a class="paper-link" href="assets/papers/lucas-wang-adaptive-systems.pdf" download>Download</a>
-                        </div>
-                    </article>
-                    <article class="paper">
-                        <div class="paper-meta">
-                            <h2>Designing Human-Guided Machine Learning Pipelines</h2>
-                            <p class="paper-authors">Lucas Wang, Mira Patel</p>
-                            <p class="paper-venue">Journal of Interactive AI, 2023</p>
-                        </div>
-                        <div class="paper-actions">
-                            <a class="paper-link" href="#">PDF coming soon</a>
-                        </div>
-                    </article>
-                    <article class="paper">
-                        <div class="paper-meta">
-                            <h2>Sensing Empathy: Multimodal Signals in Collaborative Analytics</h2>
-                            <p class="paper-authors">Lucas Wang, Kenji Ito, Sara Delgado</p>
-                            <p class="paper-venue">CHI Conference, 2022</p>
-                        </div>
-                        <div class="paper-actions">
-                            <a class="paper-link" href="#">PDF coming soon</a>
-                        </div>
+                        <h2>On Few-Distance Sets in the Plane</h2>
+                        <p class="paper-meta">Independent research in discrete geometry</p>
                     </article>
                 </div>
             </div>
