Simplify site copy for Lucas Wang

--- a/index.html
+++ b/index.html
@@ -23,46 +23,19 @@
     </header>
 
     <main>
-        <section class="hero">
-            <div class="container">
-                <p class="eyebrow">Applied machine learning & human-centered AI</p>
-                <h1>Lucas Wang</h1>
-                <p class="lead">Designing quiet technology that helps teams think with clarity.</p>
-                <div class="hero-actions">
-                    <a class="soft-link" href="research.html">See current research</a>
-                    <a class="soft-link" href="mailto:lucas.wang@university.edu">Email Lucas</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="essentials">
-            <div class="container split">
-                <div>
-                    <h2>Practice</h2>
-                    <p>I sketch and ship adaptive systems that stay calm, legible, and kind to the people who use them.</p>
-                </div>
-                <div>
-                    <h2>Now</h2>
-                    <p>Leading the Human-Centered AI Lab on studies of collaborative discovery, guided models, and thoughtful analytics tools.</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="bio">
+        <section class="hero minimal">
             <div class="container narrow">
-                <p>I build research programs where computation and care meet. My favourite work pairs rigorous modeling with generous listening.</p>
-                <ul class="inline-list">
-                    <li>Assistant Professor, Center for Applied Intelligence</li>
-                    <li>Ph.D., Computer Science, University of Cascadia</li>
-                    <li>Ambient composer & mentor to emerging scholars</li>
-                </ul>
+                <h1>Lucas Wang</h1>
+                <p>High school student interested in math and machine learning.</p>
+                <p><em>On Few-Distance Sets in the Plane</em> — independent math research.</p>
+                <a class="soft-link" href="mailto:lucaswang421@gmail.com">lucaswang421@gmail.com</a>
             </div>
         </section>
     </main>
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; <span id="year"></span> Lucas Wang. All rights reserved.</p>
+            <p>&copy; <span id="year"></span> Lucas Wang.</p>
         </div>
     </footer>
     <script>
