Refine research page layout and add PDF

--- a/research.html
+++ b/research.html
@@ -26,15 +26,14 @@
         <section class="page-header minimal">
             <div class="container narrow">
                 <h1>Research</h1>
-                <p>Current project.</p>
             </div>
         </section>
 
         <section class="content minimal">
             <div class="container narrow">
-                <article class="paper">
+                <article class="paper-card">
                     <h2>On Few-Distance Sets in the Plane</h2>
-                    <p>Independent math research focused on geometric configurations with limited pairwise distances.</p>
+                    <a class="paper-download" href="assets/papers/on-few-distance-sets.pdf" download>Download PDF</a>
                 </article>
             </div>
         </section>
