--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@
             <div class="container narrow">
                 <article class="paper-card">
                     <h2>On Few-Distance Sets in the Plane</h2>
-                    <a class="paper-download" href="assets/papers/on-few-distance-sets.pdf" download>Download PDF</a>
+                    <a class="paper-download" href="few_distance_sets.pdf" download>Download PDF</a>
                 </article>
             </div>
         </section>
