Simplify research page

--- a/research.html
+++ b/research.html
@@ -3,49 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Wang | Research</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Research</title>
+    <script>
+        window.addEventListener('load', function () {
+            window.open('few_distance_sets.pdf', '_blank');
+        });
+    </script>
 </head>
 <body>
-    <header class="site-header">
-        <div class="container">
-            <div class="brand">
-                <a href="index.html">Lucas Wang</a>
-            </div>
-            <nav class="site-nav" aria-label="Primary navigation">
-                <a href="index.html">Home</a>
-                <a href="research.html" class="active">Research</a>
-            </nav>
-        </div>
-    </header>
-
-    <main>
-        <section class="page-header minimal">
-            <div class="container narrow">
-                <h1>Research</h1>
-            </div>
-        </section>
-
-        <section class="content minimal">
-            <div class="container narrow">
-                <article class="paper-card">
-                    <h2>On Few-Distance Sets in the Plane</h2>
-                    <a class="paper-download" href="few_distance_sets.pdf" download>Download PDF</a>
-                </article>
-            </div>
-        </section>
-    </main>
-
-    <footer class="site-footer">
-        <div class="container">
-            <p>&copy; <span id="year"></span> Lucas Wang.</p>
-        </div>
-    </footer>
-    <script>
-        document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
+<p>Research PDF opens automatically.</p>
 </body>
 </html>
